--- a/footer/style.css
+++ b/footer/style.css
@@ -15,6 +15,12 @@ body {
   height: 500px;
 }
 
+@media (max-width: 800px) {
+  .fsection1 {
+    margin-right: 0;
+  }
+}
+
 .fcontact {
   color: #ffffff;
   text-align: center;
@@ -26,6 +32,12 @@ body {
 
 .fcontact:hover {
   color: #b227e9;
+}
+
+@media (max-width: 375px) {
+  .fcontact {
+    font-size: 50px;
+  }
 }
 
 .finputs {
@@ -41,6 +53,24 @@ body {
   margin-left: 5%;
 }
 
+@media (max-width: 375px) {
+  .finputs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
+.fparti2 {
+  margin: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .non {
   width: 350px;
   height: 40px;
@@ -50,9 +80,10 @@ body {
   left: 450px;
 }
 
-@media (max-width: 800) {
+@media (max-width: 800px) {
   .non {
-    margin-left: -380px;
+    position: relative;
+    left: 95px;
     width: 200px;
   }
 }
@@ -67,10 +98,11 @@ body {
   left: 95px;
 }
 
-@media (max-width: 800) {
+@media (max-width: 800px) {
   .numéro {
-    margin-left: 150px;
+    position: relative;
     width: 200px;
+    top: 20px;
   }
 }
 
@@ -83,10 +115,11 @@ body {
   border: 1.3px solid #bc93fd;
 }
 
-@media (max-width: 800) {
+@media (max-width: 800px) {
   .adres {
     width: 200px;
-    margin-left: 70px;
+    position: relative;
+    right: 60px;
   }
 }
 
@@ -98,9 +131,11 @@ body {
   border: 1.3px solid #bc93fd;
 }
 
-@media (max-width: 800) {
+@media (max-width: 800px) {
   .votre {
     width: 200px;
+    position: relative;
+    right: 60px;
   }
 }
 
@@ -117,11 +152,13 @@ body {
   border: 1.3px solid #bc93fd;
 }
 
-@media (max-width: 800) {
+@media (max-width: 800px) {
   .message {
     margin-left: 100px;
     width: 70%;
     height: 250px;
+    position: relative;
+    right: -20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
