--- a/footer/style.scss
+++ b/footer/style.scss
@@ -1,12 +1,13 @@
-$tablet:800px;
+
 $mobile:375px;
 @mixin mobile {
     @media (max-width: #{$mobile}) {
         @content;
     }
+  }
 $tablet:800px;
 @mixin tablet {
-    @media (max-width: #{$tablet}) {
+  @media (max-width: #{$tablet}) {
         @content;
     }
 }
@@ -18,7 +19,7 @@ body{
   box-sizing:border-box ;
   background-color:#EEEEEE;
   font-family:  'Montserrat';
-  @include mobile(){}
+  
 }
 .fsection1{
   
@@ -26,9 +27,10 @@ body{
   background-size: cover;
   width: 100%;
   height:500px ;
-  
-  
-
+  @include tablet(){
+  margin-right:0 ;
+  }
+   
 }
 .fcontact{
   color:  #ffffff;
@@ -40,26 +42,37 @@ body{
  margin-top:0 ;
  &:hover {
    color: rgb(178, 39, 233);
+  
+  }
+     @include  mobile(){
+       font-size:50px;
+     }
  }
 
-}
-
-
   
-
 .finputs{
   display: flex;
   flex-direction: row;
   margin-top: 3%;
   width:100% ;
   margin-left:5% ;
-  
+  @include mobile(){
+           display: grid;
+           grid-template-columns:1fr ;
+           grid-template-rows:  1fr 1fr  ;
+ 
 
-  
   }
-  
+  }
+  .fparti2{
+    margin: 0;
+    justify-content: center;
+    
+  }
+ 
 
-   .non{
+ 
+  .non{
     width:350px ;
     height:40px ;
     border-radius:15px;
@@ -67,11 +80,12 @@ body{
     position: relative;
     left:450px ;
     @include tablet(){
-    margin-left:-380px ;
+    position: relative;
+    left:95px ;
     width:200px ;
+  
     }
-    
-    
+ 
   }
   .numéro{
     width:350px ;
@@ -82,8 +96,11 @@ body{
     top: 65px;
     left: 95px;
    @include tablet(){
-   margin-left:150px ;
+    position: relative;
     width:200px ;
+    top: 20px;
+   
+    
    }
     
   }
@@ -97,9 +114,12 @@ body{
     border-radius: 15px;
     border: 1.3px solid #bc93fd ;
     @include tablet(){
-    width:200px ;
-   margin-left:70px ;
+      width:200px ;
+      position: relative;
+      right:  60px; 
+      
     }
+
 
   }
   .votre{
@@ -109,11 +129,12 @@ body{
     border-radius: 15px;
     border: 1.3px solid #bc93fd ;
     @include tablet(){
-      width:200px ;
-      margin-left:70px ;
+     width:200px ;
+     position: relative;
+     right:60px ;
+      
 
     }
-    
     
   }
 
@@ -132,7 +153,9 @@ body{
     margin-left:100px ;
    width:70% ;
     height: 250px;
+    position: relative;
+    right: -20px;
 
-  }
 }
+
 }
