--- a/footer/style.scss
+++ b/footer/style.scss
@@ -56,19 +56,18 @@ body{
   margin-top: 3%;
   width:100% ;
   margin-left:5% ;
+
   @include mobile(){
-           display: grid;
-           grid-template-columns:1fr ;
-           grid-template-rows:  1fr 1fr  ;
- 
+    display: grid;
+    grid-template-columns: 1fr;
 
   }
+  
+
   }
-  .fparti2{
-    margin: 0;
-    justify-content: center;
+  
     
-  }
+  
  
 
  
@@ -81,7 +80,7 @@ body{
     left:450px ;
     @include tablet(){
     position: relative;
-    left:95px ;
+    left:60px ;
     width:200px ;
   
     }
@@ -99,6 +98,7 @@ body{
     position: relative;
     width:200px ;
     top: 20px;
+    left:60px ;
    
     
    }
@@ -116,7 +116,7 @@ body{
     @include tablet(){
       width:200px ;
       position: relative;
-      right:  60px; 
+      right:  58px; 
       
     }
 
@@ -131,7 +131,7 @@ body{
     @include tablet(){
      width:200px ;
      position: relative;
-     right:60px ;
+     right:58px ;
       
 
     }
@@ -155,7 +155,20 @@ body{
     height: 250px;
     position: relative;
     right: -20px;
+    @include mobile(){
+      margin-left:35px ;
+     height: 50px;
+     padding: 25px 0 200px 5px ;
+    }
+
+    
 
 }
 
+}
+@include mobile(){
+  .fparti2{
+    margin-top: 50px;
+    margin-left:50px ;
+  }
 }
