--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -9,6 +9,7 @@ body {
 }
 
 // -----------------------------------header
+@import'./header';
 // -----------------------------------header
 // --------------------------------responcive
 @mixin resp($size) {
