--- a/service/_navbar.scss
+++ b/service/_navbar.scss
@@ -32,12 +32,17 @@ $mobile:375px;
     
 
     @include mobile() {
-        height: 0px;
+        height: 100px;
+        position: absolute;
+        right: -160px;
+        width: 300px;
+       
+        
     }
 
     @include tablet() {
         width: 100vw;
-        margin-left: -35px;
+        margin-left: -20px;
     }
 }
 
@@ -57,7 +62,7 @@ $mobile:375px;
     }
 
     @include mobile() {
-        font-size: 30px;
+        font-size: 20px;
     }
 }
 
