--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -7,8 +7,44 @@ body {
   background-image: url(img/back.jpg);
 }
 
-.back {
-  height: 70px;
+.back img {
+  width: 100%;
+  height: 650px;
+}
+
+.back h1 {
+  position: absolute;
+  margin-top: -500px;
+  margin-left: 35%;
+  font-size: 50px;
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 800px) {
+  .back h1 {
+    margin-right: 100%;
+  }
+}
+
+.back p {
+  width: 50%;
+  position: absolute;
+  margin-top: -400px;
+  margin-left: 27%;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
+@media (max-width: 800px) {
+  .back p {
+    margin-top: -40%;
+  }
+}
+
+.fas.fa-ellipsis-h {
+  padding-right: 30px;
 }
 
 .header {
@@ -20,7 +56,7 @@ body {
   background: #8f25D6;
   opacity: .9;
   z-index: 20;
-  width: 100vw;
+  width: 102%;
   margin-left: -50px;
 }
 
