--- a/section-pricing/_header.scss
+++ b/section-pricing/_header.scss
@@ -21,6 +21,9 @@ $mobile:375px;
     img {
         width: 100%;
         height: 650px;
+        @include mobile() {
+            height: 500px;
+        }
     }
     h1 {
         position: absolute;
@@ -31,6 +34,11 @@ $mobile:375px;
         text-decoration: none;
         @include tablet() {
             margin-right: 100%;
+        }
+        @include mobile() {
+            margin-top: -100%;
+            margin-left: 0;
+            text-align: start;
         }
     }
     p {
@@ -43,6 +51,12 @@ $mobile:375px;
         text-align: center;
         @include tablet() {
             margin-top: -40%;
+        }
+        @include mobile() {
+            width: 70%;
+            text-align: start;
+            margin-left: 0;
+            margin-top: -50%;
         }
     }
 }
@@ -62,7 +76,9 @@ $mobile:375px;
     z-index: 20;
     width: 102%;
     margin-left: -50px;
-    @include mobile() {}
+    @include mobile() {
+        width: 100%;
+    }
     @include tablet() {
         margin-left: 0px;
         padding: 0;
