--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -12,6 +12,12 @@ body {
   height: 650px;
 }
 
+@media (max-width: 375px) {
+  .back img {
+    height: 500px;
+  }
+}
+
 .back h1 {
   position: absolute;
   margin-top: -500px;
@@ -24,6 +30,14 @@ body {
 @media (max-width: 800px) {
   .back h1 {
     margin-right: 100%;
+  }
+}
+
+@media (max-width: 375px) {
+  .back h1 {
+    margin-top: -100%;
+    margin-left: 0;
+    text-align: start;
   }
 }
 
@@ -43,6 +57,15 @@ body {
   }
 }
 
+@media (max-width: 375px) {
+  .back p {
+    width: 70%;
+    text-align: start;
+    margin-left: 0;
+    margin-top: -50%;
+  }
+}
+
 .fas.fa-ellipsis-h {
   padding-right: 30px;
 }
@@ -58,6 +81,12 @@ body {
   z-index: 20;
   width: 102%;
   margin-left: -50px;
+}
+
+@media (max-width: 375px) {
+  .header {
+    width: 100%;
+  }
 }
 
 @media (max-width: 800px) {
