--- a/style1.css
+++ b/style1.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+  width: 100%;
   height: 100%;
   font-family: 'Montserrat';
   background-color: #Dae1eb;
@@ -40,20 +41,23 @@ body {
 
 .hhead .header {
   position: fixed;
-  margin-top: -20px;
   height: 100px;
-  padding: 0 10px;
+  padding: 0 20px;
   color: white;
   background: #8f25D6;
   opacity: .9;
   z-index: 20;
-  width: 100vw;
   margin-left: -50px;
 }
 
 @media (max-width: 375px) {
   .hhead .header {
-    height: 100px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    left: 18px;
+    top: -15px;
+    width: 100%;
   }
 }
 
@@ -84,6 +88,7 @@ body {
 @media (max-width: 375px) {
   .hhead .logo {
     font-size: 30px;
+    margin: 0px 0px 0px 8px;
   }
 }
 
@@ -96,6 +101,12 @@ body {
 @media (max-width: 800px) {
   .hhead .menu {
     margin-right: 0px;
+  }
+}
+
+@media (max-width: 375px) {
+  .hhead .menu {
+    margin: 0px;
   }
 }
 
@@ -150,7 +161,7 @@ body {
   .hhead .menu {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     background: #8f25D6;
     right: -100%;
     top: 0;
