--- a/style1.scss
+++ b/style1.scss
@@ -66,6 +66,7 @@
                                                          }
                                                          
                                                          body {
+                                                             width: 100%;
                                                              height: 100%;
                                                              font-family: 'Montserrat';
                                                              background-color: #Dae1eb;
@@ -88,17 +89,20 @@
                                                              }
                                                              .header {
                                                                  position: fixed;
-                                                                 margin-top: -20px;
                                                                  height: 100px;
-                                                                 padding: 0 10px;
+                                                                 padding: 0 20px;
                                                                  color: $btn-color;
                                                                  background: $primary-color;
                                                                  opacity: .9;
                                                                  z-index: 20;
-                                                                 width: 100vw;
                                                                  margin-left: -50px;
                                                                  @include mobile() {
-                                                                     height: 100px;
+                                                                     margin: 0;
+                                                                     padding: 0;
+                                                                     position: relative;
+                                                                     left: 18px;
+                                                                     top: -15px;
+                                                                     width: 100%;
                                                                  }
                                                                  @include tablet() {
                                                                      width: 100vw;
@@ -119,6 +123,7 @@
                                                                  }
                                                                  @include mobile() {
                                                                      font-size: 30px;
+                                                                     margin: 0px 0px 0px 8px;
                                                                  }
                                                              }
                                                              .menu {
@@ -127,6 +132,9 @@
                                                                  margin-left: 240px;
                                                                  @include tablet() {
                                                                      margin-right: 0px;
+                                                                 }
+                                                                 @include mobile() {
+                                                                     margin: 0px;
                                                                  }
                                                              }
                                                              .menu a {
@@ -171,7 +179,7 @@
                                                                  .menu {
                                                                      position: fixed;
                                                                      width: 100%;
-                                                                     height: 100vh;
+                                                                     height: 50vh;
                                                                      background: $primary-color;
                                                                      right: -100%;
                                                                      top: 0;
@@ -651,4 +659,4 @@
                                                              }
                                                          }
                                                          
-                                                         @import "./footer"
+                                                         @import "./footer";
