--- a/service/_navbar.scss
+++ b/service/_navbar.scss
@@ -129,7 +129,7 @@ $mobile:375px;
     .menu {
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background: $primary-color;
         right: -100%;
         top: 0;
@@ -139,7 +139,6 @@ $mobile:375px;
         transition: 0.7s;
         z-index: 10;
     }
-
     .menu a {
         display: block;
         padding: 20px;
