--- a/service/style.css
+++ b/service/style.css
@@ -26,7 +26,7 @@ hr {
   width: 900px;
   height: 300px;
   position: relative;
-  left: 150px;
+  left: 160px;
 }
 
 .Spara {
@@ -549,7 +549,7 @@ footer .projet h3 {
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr .4fr 0.4fr;
         grid-template-rows: 1fr .4fr 0.4fr;
-        grid-template-areas: "form" "contact" "icon";
+        grid-template-areas: "form" "contact" "icon";
   }
 }
 
@@ -860,7 +860,7 @@ footer .copy h6 {
   .menu {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #8f25D6;
     right: -100%;
     top: 0;
