--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -1,279 +1,262 @@
 @mixin flex {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 @mixin mq($width) {
-    @media (max-width: #{$width}) {
-        @content;
-    }
+  @media (max-width: #{$width}) {
+    @content;
+  }
 }
 
-
-
+@import'./navbar';
 
 body {
-    background-color: #dae1eb;
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
+  background-color: #dae1eb;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
-
-
 
 
 
 .header {
-    background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
-    background-attachment: fixed;
+  background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: bottom;
+  height: 720px;
+  box-shadow: 0 10px 16px 0px #7749c160;
+
+  @include mq(800px) {
     background-size: cover;
     background-position: bottom;
+  }
+
+  .abg {
+    width: 100%;
     height: 720px;
-    box-shadow: 0 10px 16px 0px #7749c160;
-
-    @include mq(800px) {
-        background-size: cover;
-        background-position: bottom;
-    }
-
-
-    .abg {
-        width: 100%;
-        height: 720px;
-        position: absolute;
-        z-index: 2;
-        background-color: rgba($color: #7749c1, $alpha: 0.7);
-    }
+    position: absolute;
+    z-index: 2;
+    background-color: rgba($color: #7749c1, $alpha: 0.7);
+  }
 }
 
 .para {
-    text-align: center;
-    width: 600px;
-    margin: 270px auto 0 auto;
-    font-size: 19px;
-    color: whitesmoke;
-    position: relative;
-    top: 30px;
-    z-index: 2;
+  text-align: center;
+  width: 600px;
+  margin: 270px auto 0 auto;
+  font-size: 19px;
+  color: whitesmoke;
+  position: relative;
+  top: 30px;
+  z-index: 2;
 
-    @include mq(375px) {
-        width: 310px;
-        top: 0;
-    }
+  @include mq(375px) {
+    width: 310px;
+    top: 0;
+  }
 
-    p {
-        margin-top: 30px;
-        margin-bottom: 0;
-        line-height: 150%;
-    }
+  p {
+    margin-top: 30px;
+    margin-bottom: 0;
+    line-height: 150%;
+  }
 }
 
 .title {
-    h1 {
-        text-align: center;
-        font-size: 65px;
-        color: white;
-        position: relative;
-        top: 190px;
-        z-index: 2;
-        margin: 0;
-        padding: 0;
+  h1 {
+    text-align: center;
+    font-size: 65px;
+    color: white;
+    position: relative;
+    top: 190px;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
 
-        @include mq(375px) {
-            top: 170px;
-            font-size: 40px;
-        }
-
+    @include mq(375px) {
+      top: 170px;
+      font-size: 40px;
     }
+  }
 }
 
 h2 {
-    color: #7749c1;
-    transition: all 0.4s ease-in-out;
+  color: #7749c1;
+  transition: all 0.4s ease-in-out;
 }
 
 h3 {
-    color: rgb(85, 83, 83);
+  color: rgb(85, 83, 83);
 }
 
 .container {
-    @include flex();
-    text-align: center;
-    margin-top: 150px;
-    flex-wrap: nowrap;
+  @include flex();
+  text-align: center;
+  margin-top: 150px;
+  flex-wrap: nowrap;
 
-    @include mq(800px) {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+  @include mq(800px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
 
+  @include mq(375px) {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  img {
+    height: 160px;
+    border-radius: 50%;
+    position: relative;
+    bottom: 110px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  @include mq(800px) {
+
+    .team3,
+    .team4 {
+      margin-top: 80px;
+
+      @include mq(375px) {
+        margin-top: 140px;
+      }
     }
 
     @include mq(375px) {
-        display: grid;
-        grid-template-columns: 1fr;
-
+      .team2 {
+        margin-top: 70px;
+      }
     }
+  }
 
-    img {
-        height: 160px;
-        border-radius: 50%;
-        position: relative;
-        bottom: 110px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
+  .team {
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #dae1eb;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.4s ease-in-out;
+    border-top: 8px solid #7749c1;
+    height: 445px;
 
-    @include mq(800px) {
-
-        .team3,
-        .team4 {
-            margin-top: 80px;
-
-
-            @include mq(375px) {
-                margin-top: 140px;
-            }
-
-
-        }
-
-
-        @include mq(375px) {
-            .team2 {
-                margin-top: 70px;
-            }
-        }
-    }
-
-    .team {
-        margin-left: 25px;
-        margin-right: 25px;
-        background-color: #dae1eb;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        transition: all 0.4s ease-in-out;
-        border-top: 8px solid #7749c1;
-        height: 445px;
-
-
-
-        h2,
-        h3,
-        p {
-            position: relative;
-            bottom: 110px;
-        }
-
-        .icon-link {
-            display: flex;
-            text-decoration: none;
-            font-size: 19px;
-            color: rgb(165, 164, 164);
-            border-radius: 50%;
-            height: 45px;
-            width: 45px;
-            box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
-
-            &:hover {
-                box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 0.288);
-
-                .fa-twitter {
-                    color: #1da1f2;
-                }
-
-                .fa-facebook-f {
-                    color: #1877f2;
-                }
-
-                .fa-instagram {
-                    color: #e4405f;
-                }
-
-                .fa-linkedin-in {
-                    color: #0077b5;
-                }
-            }
-        }
-    }
-
+    h2,
+    h3,
     p {
-        width: 240px;
-        font-size: 15px;
-        font-weight: 100;
-
-        height: 300px;
-        color: rgb(133, 126, 126);
-        position: relative;
-        bottom: 110px;
-
-        @include mq(800px) {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-
+      position: relative;
+      bottom: 110px;
     }
 
-    ul {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        list-style: none;
-        position: relative;
-        bottom: 200px;
-    }
+    .icon-link {
+      display: flex;
+      text-decoration: none;
+      font-size: 19px;
+      color: rgb(165, 164, 164);
+      border-radius: 50%;
+      height: 45px;
+      width: 45px;
+      box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
 
-    .icon {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    i {
-        margin: auto;
+      &:hover {
+        box-shadow: inset -4px -4px 8px #ffffff73,
+          inset 3px 3px 5px rgba(94, 104, 121, 0.288);
 
         .fa-twitter {
-            color: #1da1f2;
+          color: #1da1f2;
         }
+
+        .fa-facebook-f {
+          color: #1877f2;
+        }
+
+        .fa-instagram {
+          color: #e4405f;
+        }
+
+        .fa-linkedin-in {
+          color: #0077b5;
+        }
+      }
     }
+  }
+
+  p {
+    width: 240px;
+    font-size: 15px;
+    font-weight: 100;
+
+    height: 300px;
+    color: rgb(133, 126, 126);
+    position: relative;
+    bottom: 110px;
+
+    @include mq(800px) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  .icon {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    position: relative;
+    bottom: 200px;
+  }
+
+  .icon {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  i {
+    margin: auto;
+
+    .fa-twitter {
+      color: #1da1f2;
+    }
+  }
 }
 
 .title1 {
-    h1 {
-        text-align: center;
-        color: #7749c1;
-        font-size: 40px;
-        margin-top: 90px;
-    }
+  h1 {
+    text-align: center;
+    color: #7749c1;
+    font-size: 40px;
+    margin-top: 90px;
+  }
 }
 
 .clients1 {
-    @include flex();
-    margin: 80px 50px 80px 50px;
-    flex-wrap: wrap;
+  @include flex();
+  margin: 80px 50px 80px 50px;
+  flex-wrap: wrap;
 
-    @include mq(800px) {
-        margin: 80px 50px 0px 50px;
+  @include mq(800px) {
+    margin: 80px 50px 0px 50px;
 
-        .none {
-            display: none;
-
-        }
+    .none {
+      display: none;
     }
+  }
 }
 
 .clients2 {
-    @include flex();
-    margin: 0 50px 0 50px;
-    flex-wrap: wrap;
+  @include flex();
+  margin: 0 50px 0 50px;
+  flex-wrap: wrap;
 
-    @include mq(800px) {
-        .none {
-            display: none;
-
-        }
+  @include mq(800px) {
+    .none {
+      display: none;
     }
-
+  }
 }
 
 @import "./client";
