--- a/team and client/style.css
+++ b/team and client/style.css
@@ -1,6 +1,7 @@
 .hilmi-header {
   position: fixed;
-  margin-top: -140px;
+  left: 30px;
+  margin-top: -20px;
   height: 100px;
   padding: 0 10px;
   color: white;
@@ -8,37 +9,37 @@
   opacity: .9;
   z-index: 20;
   width: 100vw;
-  margin-left: -40px;
+  margin-left: -50px;
 }
 
-@media (max-width: 375px) {
-  .hilmi-header {
-    height: 0px;
-  }
+.hilmi-header ul {
+  margin: 12px 3px 14px 218px;
 }
 
 @media (max-width: 800px) {
   .hilmi-header {
     width: 100vw;
     margin-left: -35px;
+    left: 28px;
   }
 }
 
 .logo {
-  margin-top: -5px;
   line-height: 100px;
   float: left;
   color: #8f25D6;
   margin-left: 60px;
-  font-size: 30px;
+  font-size: 35px;
   color: white;
   cursor: pointer;
+  margin: 11px 0px 12px 44px;
 }
 
 @media (max-width: 800px) {
   .logo {
     margin: 0px;
     margin-left: 10px;
+    margin: 8px 8px 16px 14px;
   }
 }
 
@@ -49,7 +50,6 @@
 }
 
 .menu {
-  margin-top: -120px;
   float: right;
   line-height: 100px;
   margin-left: 240px;
@@ -58,8 +58,6 @@
 @media (max-width: 800px) {
   .menu {
     margin-right: 0px;
-    font-size: 25px;
-    margin-bottom: 100px;
   }
 }
 
@@ -99,6 +97,7 @@
 
 .show-menu-btn i {
   line-height: 100px;
+  margin: 8px 20px 7px 9px;
 }
 
 #chk {
@@ -112,12 +111,12 @@
     display: block;
   }
   .menu {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100vh;
     background: #8f25D6;
     right: -100%;
-    top: 0;
+    bottom: 50px;
     text-align: center;
     padding: 80px 0;
     line-height: normal;
