--- a/style1.scss
+++ b/style1.scss
@@ -87,121 +87,7 @@
                                                                  max-width: 800px;
                                                                  max-height: 600px;
                                                              }
-                                                             .header {
-                                                                 position: fixed;
-                                                                 height: 100px;
-                                                                 padding: 0 20px;
-                                                                 color: $btn-color;
-                                                                 background: $primary-color;
-                                                                 opacity: .9;
-                                                                 z-index: 20;
-                                                                 margin-left: -50px;
-                                                                 @include mobile() {
-                                                                     margin: 0;
-                                                                     padding: 0;
-                                                                     position: relative;
-                                                                     left: 18px;
-                                                                     top: -15px;
-                                                                     width: 100%;
-                                                                 }
-                                                                 @include tablet() {
-                                                                     width: 100vw;
-                                                                     margin-left: -36px;
-                                                                 }
-                                                             }
-                                                             .logo {
-                                                                 line-height: 100px;
-                                                                 float: left;
-                                                                 color: $primary-color;
-                                                                 margin-left: 60px;
-                                                                 font-size: 35px;
-                                                                 color: $btn-color;
-                                                                 cursor: pointer;
-                                                                 @include tablet() {
-                                                                     margin: 0px;
-                                                                     margin-left: 18px;
-                                                                 }
-                                                                 @include mobile() {
-                                                                     font-size: 30px;
-                                                                     margin: 0px 0px 0px 8px;
-                                                                 }
-                                                             }
-                                                             .menu {
-                                                                 float: right;
-                                                                 line-height: 100px;
-                                                                 margin-left: 240px;
-                                                                 @include tablet() {
-                                                                     margin-right: 0px;
-                                                                 }
-                                                                 @include mobile() {
-                                                                     margin: 0px;
-                                                                 }
-                                                             }
-                                                             .menu a {
-                                                                 color: $btn-color;
-                                                                 text-transform: uppercase;
-                                                                 text-decoration: none;
-                                                                 font-weight: bold;
-                                                                 padding: 0 40px;
-                                                                 transition: 0.4s;
-                                                                 &:hover {
-                                                                     background-color: $btn-color;
-                                                                     border-radius: 30px;
-                                                                     padding: 10px;
-                                                                     padding-right: 20px;
-                                                                     font-style: unset;
-                                                                     color: $primary-color;
-                                                                     transition: .5s;
-                                                                 }
-                                                             }
-                                                             .show-menu-btn,
-                                                             .hide-menu-btn {
-                                                                 transition: 0.4s;
-                                                                 font-size: 30px;
-                                                                 cursor: pointer;
-                                                                 display: none;
-                                                             }
-                                                             .show-menu-btn {
-                                                                 float: right;
-                                                             }
-                                                             .show-menu-btn i {
-                                                                 line-height: 100px;
-                                                             }
-                                                             #chk {
-                                                                 position: absolute;
-                                                                 visibility: hidden;
-                                                             }
-                                                             @include tablet() {
-                                                                 .show-menu-btn,
-                                                                 .hide-menu-btn {
-                                                                     display: block;
-                                                                 }
-                                                                 .menu {
-                                                                     position: fixed;
-                                                                     width: 100%;
-                                                                     height: 50vh;
-                                                                     background: $primary-color;
-                                                                     right: -100%;
-                                                                     top: 0;
-                                                                     text-align: center;
-                                                                     padding: 80px 0;
-                                                                     line-height: normal;
-                                                                     transition: 0.7s;
-                                                                     z-index: 10;
-                                                                 }
-                                                                 .menu a {
-                                                                     display: block;
-                                                                     padding: 20px;
-                                                                 }
-                                                                 .hide-menu-btn {
-                                                                     position: absolute;
-                                                                     top: 40px;
-                                                                     right: 40px;
-                                                                 }
-                                                                 #chk:checked~.menu {
-                                                                     right: 0;
-                                                                 }
-                                                             }
+                                                             @import "./navbar";
                                                              .hpara {
                                                                  text-align: center;
                                                                  width: 600px;
