--- a/team and client/style.css
+++ b/team and client/style.css
@@ -66,7 +66,7 @@
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  padding: 0 40px;
+  padding: 0px 40px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -74,9 +74,7 @@
 .menu a:hover {
   background-color: white;
   border-radius: 30px;
-  padding: 10px;
-  padding-right: 20px;
-  font-style: unset;
+  padding: 10px 40px;
   color: #8f25D6;
   -webkit-transition: .5s;
   transition: .5s;
@@ -126,7 +124,8 @@
   }
   .menu a {
     display: block;
-    padding: 20px;
+    margin: 20px;
+    padding: 10px;
   }
   .hide-menu-btn {
     position: absolute;
