--- a/footer/style.css
+++ b/footer/style.css
@@ -16,6 +16,7 @@ body {
 
 .fcontact {
   color: #ffffff;
+  text-transform: capitalize;
   text-align: center;
   position: relative;
   top: 200PX;
@@ -95,11 +96,12 @@ body {
 .finputs .message {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 100%;
+  width: 99%;
   height: 250px;
   border-radius: 10px;
   margin: 10px 10px;
   border: 1.3px solid #bc93fd;
+  padding-bottom: 200px;
 }
 
 footer {
@@ -383,5 +385,142 @@ footer .copy h6 {
   font-weight: 100;
   margin: 0 auto;
   padding: 0;
+}
+
+.header {
+  position: fixed;
+  margin-top: -20px;
+  height: 100px;
+  padding: 0 10px;
+  color: white;
+  background: #8f25D6;
+  opacity: .9;
+  z-index: 20;
+  width: 100vw;
+  margin-left: -50px;
+}
+
+@media (max-width: 375px) {
+  .header {
+    height: 0px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header {
+    width: 100vw;
+    margin-left: -35px;
+  }
+}
+
+.logo {
+  line-height: 100px;
+  float: left;
+  color: #8f25D6;
+  margin-left: 60px;
+  font-size: 35px;
+  color: white;
+  cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  .logo {
+    margin: 0px;
+    margin-left: 40px;
+  }
+}
+
+@media (max-width: 375px) {
+  .logo {
+    font-size: 30px;
+  }
+}
+
+.menu {
+  float: right;
+  line-height: 100px;
+  margin-left: 240px;
+}
+
+@media (max-width: 800px) {
+  .menu {
+    margin-right: 0px;
+  }
+}
+
+.menu a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 0 40px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.menu a:hover {
+  background-color: white;
+  border-radius: 30px;
+  padding: 10px;
+  padding-right: 20px;
+  font-style: unset;
+  color: #8f25D6;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.show-menu-btn,
+.hide-menu-btn {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.show-menu-btn {
+  float: right;
+}
+
+.show-menu-btn i {
+  line-height: 100px;
+}
+
+#chk {
+  position: absolute;
+  visibility: hidden;
+}
+
+@media (max-width: 800px) {
+  .show-menu-btn,
+  .hide-menu-btn {
+    display: block;
+  }
+  .menu {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #8f25D6;
+    right: -100%;
+    top: 0;
+    text-align: center;
+    padding: 80px 0;
+    line-height: normal;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+    z-index: 10;
+  }
+  .menu a {
+    display: block;
+    padding: 20px;
+  }
+  .hide-menu-btn {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+  }
+  #chk:checked ~ .menu {
+    right: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
